--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
 body {
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
+    gap: 300px;
 
+}
+
+#btn-cont{
+    height: 800px;
+    display: flex;
+    align-items: flex-start;
 }
 
 #container {
-    border: 1px solid red;
-    width: 832px;
-    height: 832px;
+    width: 800px;
+    height: 800px;
     display: flex;
     flex-wrap: wrap;
+    
+    
 }
 
 .content {
-    width: 50px;
-    height: 50px;
-    border: 1px solid red;
-
+    border: 1px solid black;
 }
+
